# causal-spacetime

./: .gitignore  AGENTS.md  HANDOFF-P5B.md  README.md  pyproject.toml
docs/: next_experiments_plan.md  p7_enhanced_sampling.md  p7_fss_rescope_probe_results.json  p7_fss_rescope_recon.md  p7_tunneling_scaling_n50_80.csv  references.md  research_notes.md  selector_robustness_probe.md  selector_robustness_probe_results.json  statistical_calibration.md  validation_plan.md
experiments/: carry_forward_failure_experiment_helpers.py  cross_family_robustness_experiment_helpers.py  exp02_lorentz_length_contraction.py  exp03_causalset_timelike_reconstruction.py  exp05_finite_speed_lattice_counterexample.py  exp06_spacelike_distance_reconstruction.py  exp07_timelike_pair_reconstruction_convergence.py  exp08_probe_pair_statistical_calibration.py  exp09_longest_chain_calibration.py  exp100_echo_response_signature_exact_sanity.py  exp101_layered_echo_response_order_recovery.py  exp102_echo_response_signature_coarse_protocol_stability.py  exp103_echo_response_shortcut_robust_core.py  exp104_echo_response_reference_protocol_dependence.py  exp105_echo_response_order_precondition_diagnostics.py  exp106_echo_response_signature_stability_exact_sanity.py  exp107_echo_order_semantics_exact_sanity.py  exp108_gated_echo_protocol_comparison.py  exp109_echo_delay_spacing_tie_resolution.py  exp10_dimension_reconstruction.py  exp110_response_order_scalar_representability.py  exp111_echo_terminology_audit.py  exp112_response_representability_exact_sanity.py  (+295 more)
scripts/: check_theory_language.py  (+1 more)
(+710 files in other folders)
